changed GUEST to AWAY

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="column-container">
-                    <h3 id="guest-text">GUEST</h3>
+                    <h3 id="guest-text">AWAY</h3>
                     <div class='score-container'>
                         <p id="guest-score"></p>
                     </div>
